@@ -103,7 +103,7 @@ public class WorkgroupProperties extends IQ {
             while (!done) {
                 int eventType = parser.next();
                 if ((eventType == XmlPullParser.START_TAG) && ("authRequired".equals(parser.getName()))) {
-                    props.setAuthRequired(new Boolean(parser.nextText()).booleanValue());
+                    props.setAuthRequired(Boolean.valueOf(parser.nextText()).booleanValue());
                 }
                 else if ((eventType == XmlPullParser.START_TAG) && ("email".equals(parser.getName()))) {
                     props.setEmail(parser.nextText());
